changes on 10oct16

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
   <div class="headerNavBar">
 	<ul>
-		<li>About</li>
-		<li>My Skills</li>
-		<li>Experience</li>
-		<li>Education</li>
-		<li>Portfolio</li>
-		<li>Contact</li>
-		<li>BloG</li>
+		<li><a href="#aboutMe">About</a></li>
+		<li><a href="#">My Skills</a></li>
+		<li><a href="#">Experience</a></li>
+		<li><a href="#">Education</a></li>
+		<li><a href="#">Portfolio</a></li>
+		<li><a href="#">Contact</a></li>
+		<li><a href="#">BloG</a></li>
 	</ul>
   </div>	
   <div class="caption">
