--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=David+Libre" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" />
+  <script src="js/jquery.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
 <div class="commonPos gradientTop">
