--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
+<!--
+ Name: Mayank Nimje
+ Description: About me, my work, my passion, my work.
+ comment: Description of my personal website.
+ Author: Mayank Nimje
+ Initial Draft: 9/09/16
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=David+Libre" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />  
   <script src="js/jquery.js"></script>
+  <script src="js/anim.js"></script>
   <script src="js/script.js"></script>
 </head>
 <body>
