--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<li><a href="#">BloG</a></li>
 	</ul>
   </div>	
-  <div class="caption">
+  <div class="caption about" id="about">
     <span class="border"> 
       <span class="leftMarker"></span> 
       <span class="innerText"> <a href="#aboutMe"><i>About Me </i></a></span>
