--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </div>     
     
 <!-- Submit Query Comes here -->
-<div class="queryContent">
+<div id="myFeedback" class="queryContent">
   <h3 style="text-align:center;">Feedback | Improvice</h3>
   <p>Please provide your valuable feedback</p>
   <div class="formFields">
